# learn-nix

./: .gitignore  README.md  controlnet.py  flake2.nix  flake3.nix  hf-onnx.py  hf-test.py  home-manager.md  matrix.json  notes.md
code-server/: Dockerfile  cache.sh  download-all.sh  flake.nix
conda/: environment.yml
cuda/: flake.nix
devenv/flake/: flake.nix
devenv/flake-parts/: .pre-commit-config.yaml  flake.nix
docker/: Dockerfile  nixery.dev.md
docker/dockerTools/: README.md  flake.nix
docker/nix2container/: README.md
hello_world/: hello_world.nix
jupyenv/: kernels.nix
jupyenv/ml-2023-03-09/: Dockerfile  ml.toml  pyproject.toml  requirements.txt  setup.sh  transformers.nix
jupyterWith/: flake.nix
mach-nix/: flake.nix
old/jupyterWith/: Untitled.ipynb  flake.nix
old/jupyterWith2/: flake.nix
poetry2nix/: flake.nix  pyproject.toml
poetry2nix/iapaidki/: __init__.py
poetry2nixAlt/: flake.nix  pyproject.toml
python/: README.md
python/conda/: environment copy.yml  environment.yml  install.sh  mlws5.yml  mlws6.yml  mlws7.yml  mlws8.yml  mlws9.yml  out
python/devenv.sh/: actor.py  benchmark_fs.py  devenv.nix  pyproject.toml
python/dream2nix/: LICENSE.txt  README.md  pyproject.toml
python/dream2nix/learn_dream_2_nix/: __about__.py  __init__.py
python/dream2nix/tests/: __init__.py
python/flake/: flake.nix
python/mach-nix/: README.md
python/micromamba/: Dockerfile  conda-forge.yml
python/nixpkgs-pytools/: README.md
python/poetry2nix/: README.md  flake.nix  pyproject.toml
python/pypi2nix/: README.md  readme.md  try.sh
python/withPackages/: flake.nix
rust/buildRustPackage/: README.md
rust/cargo2nix/: Cargo.nix  README.md  flake.nix
rust/divnix/: readme.md
rust/dream2nix/: Cargo.toml  data.json  flake.nix  readme.md
rust/dream2nix-parts/: README.md  flake.nix  projects.toml
rust/dream2nix/src/: main.rs
rust/nix-cargo-integration/: flake.nix  readme.md
simple_container/: flake.nix  readme.md
ssh-ping/: data.toml  mlfs.sh  ssh-ping.sh
tools/: update.md
trash/: Dockerfile  flake copy.nix  flake2.nix  flake3.nix
