[tool.poetry]
name = "iapaidki"
version = "0.1.0"
description = "learning poetry"
authors = ["LizeLive"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116/"