[tool.poetry]
name = "ml-2023-03-09"
version = "0.20230309.0"
description = "A decent ml starting point."
authors = ["lize.live <git@lize.live>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "ml_2023_03_09"}]

[tool.poetry.dependencies]
python = "~3.10"
torch = "^1.13.1"
transformers = "^4.26.1"
diffusers = "^0.14.0"
accelerate = "^0.17.0"
scipy = "^1.10.1"
safetensors = "^0.3.0"
xformers = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
