[tool.poetry]
name = "poetry2nix"
version = "0.1.0"
description = ""
authors = ["lize.live <git@lize.live>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "^1.13.1"
transformers = "^4.26.1"
diffusers = "^0.14.0"
accelerate = "^0.17.0"
scipy = "^1.10.1"
safetensors = "^0.3.0"
xformers = "^0.0.16"
opencv-contrib-python = "^4.7.0.72"
controlnet-aux = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
